# nexus-console

./: .editorconfig  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.json  CODEBASE_REVIEW_SUMMARY.md  CONSOLE_TEAM_ACTION_CHECKLIST.md  CONTRIBUTING.md  Dockerfile  Dockerfile.uv  LICENSE  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  POETRY_TO_UV_MIGRATION.md  PYTHON_READY_WITH_UV.md  QUICK_REFERENCE_CARD.md  README.md  SECURITY.md  commitlint.config.js  docker-compose.yml  package.json  playwright.config.ts  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit
docs/: ALIGNMENT-ACTION-PLAN.md  ALIGNMENT-ISSUES-REPORT.md  ALIGNMENT-VERIFICATION-REPORT.md  AUTHENTICATION_FLOW.md  BRIDGE-TESTING.md  BROADCAST-MONITORING.md  CODE-QUALITY-REVIEW.md  ENVIRONMENT-VARIABLES.md  FINAL-INTEGRATION-SUMMARY.md  HAPPY_DEVKIT_INTEGRATION.md  HYBRID-ARCHITECTURE.md  IMPLEMENTATION-COMPARISON.md  IMPLEMENTATION-SUMMARY.md  OBSERVATORY-INTEGRATION-GUIDE.md  OBSERVATORY_INTEGRATION.md  PERFORMANCE_STANDARDS.md  PLUGIN_DEVELOPMENT.md  SBOM.md  SECURITY_GUIDE.md  SECURITY_TESTING.md  SHARED-CONFIG-ALIGNMENT-REPORT.md  SHARED-CONFIG-MIGRATION.md  SHARED_CONFIG_USAGE.md  TROUBLESHOOTING.md  WEBSOCKET_PROTOCOL.md  architecture.md  getting-started.md
examples/: advanced-features.ts  basic-usage.ts  basic.html  integration-examples.tsx  secure-example.html
scripts/: generate-sbom.js  migrate-to-shared-config.sh
server/: README.md  migrate-to-uv.sh  pyproject.toml  requirements-dev.txt  requirements.txt
src/: index.ts
src/__tests__/: setup.ts  (+2 more)
(+48 files in other folders)
